[package]
name = "temperature-convert"
version = "1.0.0"
edition = "2021"
authors = ["Rakuja"]
categories = ["science", "mathematics", "no_std"]
keywords = ["temperature", "convert", "units", "library", "no_std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RakuJa/temperature-convert"
description = "Temperature unit converter between Celsius, Fahrenheit and Kelvin."
rust-version = "1.63.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = {level = "warn", priority = 1}

[dependencies]
cfg-if = "1.0.3"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false }

[features]
default = []
std = []
